# DogFight

./: Cargo.toml  README  README.md
assets/: Spaceship.glb  Spaceship.gltf  Spaceship2 - Copy.glb  Spaceship2.glb  Spaceship2.gltf  Spaceship3.glb  Spaceship3.gltf  Spaceship4.glb  SpaceshipBot.glb  Sun2.glb  Sun3.glb  Sun3.gltf  blur.wgsl  lazer_bullet2.glb  missile.glb  missile2.glb
assets/Spaceship3/: Spaceship3.gltf
assets/Spaceship4/: Spaceship4.gltf
assets/SpaceshipBot/: SpaceshipBot.gltf
assets/terrain/: cloud_mesh.glb  newmesh.glb  newmesh2.glb  newmesh3.glb  newmesh4.glb
src/: asset_loader.rs  camera.rs  controls.rs  events.rs  main.rs  movement.rs  obstacle.rs  sets.rs  spaceship.rs  states.rs
src/game/: bots.rs  camera.rs  collider.rs  debug.rs  environment.rs  explosion.rs  mesh.rs  missile.rs  mod.rs  movement.rs  obstacle.rs  oct_tree.rs  spaceship.rs  swarm.rs  terrain.rs  turret.rs
src/game/map_one/: mod.rs
src/game/pause_menu/: mod.rs
src/menu/: mod.rs
