[package]
name = "spaceship_game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.29.1"
bevy_dev_tools = "0.15.1"
bevy_panorbit_camera = "0.21"
bevy_render = "0.15.3"
noise = "0.9.0"
rand = "0.9.0"
